[tool.poetry]
name = "bgpranking"
version = "2.0"
description = "BGP Ranking is a software to rank AS numbers based on their malicious activities."
authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]
license = "AGPLv3"

[tool.poetry.scripts]
start = "bin.start:main"
stop = "bin.stop:main"
update = "bin.update:main"
shutdown = "bin.shutdown:main"
run_backend = "bin.run_backend:main"
start_website = "bin.start_website:main"

archiver = "bin.archiver:main"
asn_descriptions = "bin.asn_descriptions:main"
dbinsert = "bin.dbinsert:main"
fetcher = "bin.fetcher:main"
parser = "bin.parser:main"
ranking = "bin.ranking:main"
sanitizer = "bin.sanitizer:main"
ssfetcher = "bin.ssfetcher:main"


[tool.poetry.dependencies]
python = "^3.10"
redis = {version = "^5.3.1", extras = ["hiredis"]}
flask-restx = "^1.3.2"
gunicorn = "^22.0.0"
python-dateutil = "^2.9.0.post0"
pyipasnhistory = "^2.1.5"
pycountry = "^23.12.11"
beautifulsoup4 = "^4.14.2"
aiohttp = "^3.12.15"
Bootstrap-Flask = "^2.5.0"
pid = "^3.0.4"
pybgpranking2 = "^2.0.2"

[tool.poetry.dev-dependencies]
mypy = "^1.18.2"
types-setuptools = "^70.3.0.20240710"
types-redis = "^4.6.0.20241004"
types-requests = "^2.32.4.20250913"
types-python-dateutil = "^2.9.0.20250822"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = 3.10
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = false
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true
